trunk/Archive2/a9/885ad744a218de/output
main.cpp: In function 'int main()':
main.cpp:6:9: error: invalid declaration of member template in local class
         template <typename Type>
         ^
